--- a/hw3/myapp/src/app/app.component.html
+++ b/hw3/myapp/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-todo-list-filters (filterByCompleted)="CompletedTasksItems()" (filterByAllTasks)="AllTasks()" (filterByNotCompleted)="NotCompletedTask()"></app-todo-list-filters>
 <app-todo-list [list]="taskList"
   (deleteEvent)="deleteTodoItem($event)"
+  (completeEvent)="completeTodoItem($event)"
 ></app-todo-list>
