--- a/hw3/myapp/src/app/components/todo-list/todo-list.component.html
+++ b/hw3/myapp/src/app/components/todo-list/todo-list.component.html
@@ -4,6 +4,7 @@
       *ngFor="let item of list;"
       [item]="item"
       (deleteEvent)="onDeleteItem($event)"
+      (completeEvent)="onCompleteItem($event)"
     ></app-todo-list-item>
   </ul>
 </div>
