--- a/hw3/myapp/src/app/components/todo-form/todo-form.component.html
+++ b/hw3/myapp/src/app/components/todo-form/todo-form.component.html
@@ -5,7 +5,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Add todo</h5>
-            <form (ngSubmit)="onSubmit()" #mainForm='ngForm'>
+            <form (ngSubmit)="onSubmit()" #mainForm="ngForm">
               <input [(ngModel)]="todoForm.title" type="text" name="title" class="form-control" #title="ngModel" required>
               <div class="alert alert-danger" *ngIf="title.invalid"></div>
               <button
