--- a/hw3/myapp/src/app/app.component.html
+++ b/hw3/myapp/src/app/app.component.html
@@ -3,4 +3,6 @@
 <app-todo-list [list]="taskList"
   (deleteEvent)="deleteTodoItem($event)"
   (completeEvent)="completeTodoItem($event)"
+  (editEvent)="editTodoItem($event)"
+  (saveEvent)="saveTodoItem($event)"
 ></app-todo-list>
