--- a/hw3/myapp/src/app/components/todo-list-item/todo-list-item.component.css
+++ b/hw3/myapp/src/app/components/todo-list-item/todo-list-item.component.css
@@ -11,7 +11,9 @@
   opacity: .7;
 }
 .btn-danger:focus,
-.btn-primary:focus{
+.btn-primary:focus,
+.btn-info:focus,
+.btn-success:focus{
   box-shadow:none;
 }
 
