--- a/hw3/myapp/src/app/components/todo-list/todo-list.component.html
+++ b/hw3/myapp/src/app/components/todo-list/todo-list.component.html
@@ -5,6 +5,8 @@
       [item]="item"
       (deleteEvent)="onDeleteItem($event)"
       (completeEvent)="onCompleteItem($event)"
+      (editEvent)="onEditItem($event)"
+      (saveEvent)="onSaveItem($event)"
     ></app-todo-list-item>
   </ul>
 </div>
