--- a/hw3/myapp/src/app/app.component.html
+++ b/hw3/myapp/src/app/app.component.html
@@ -1,5 +1,9 @@
 <app-todo-form (submitEvent)="onFormSubmit($event)"></app-todo-form>
-<app-todo-list-filters (filterByCompleted)="CompletedTasksItems()" (filterByAllTasks)="AllTasks()" (filterByNotCompleted)="NotCompletedTask()"></app-todo-list-filters>
+<app-todo-list-filters
+  (filterByCompleted)="completedTasksItems()"
+  (filterByAllTasks)="allTasks()"
+  (filterByNotCompleted)="notCompletedTask()">
+</app-todo-list-filters>
 <app-todo-list [list]="taskList"
   (deleteEvent)="deleteTodoItem($event)"
   (completeEvent)="completeTodoItem($event)"
